--- a/smartr_account/Scarb.toml
+++ b/smartr_account/Scarb.toml
@@ -2,13 +2,14 @@
 name = "smartr"
 version = "0.1.0"
 edition = "2023_11"
+experimental-features = ["negative_impls"]
 
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
 
 [dependencies]
 openzeppelin = { git = "https://github.com/openzeppelin/cairo-contracts", tag = "v0.10.0" }
 snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.19.0" }
-starknet = "2.6.2"
+starknet = "2.6.3"
 
 [[target.starknet-contract]]
 sierra = true
