--- a/smartr_account/package.json
+++ b/smartr_account/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.27",
+    "abi-wan-kanabi": "^2.2.1",
     "jest": "^29.7.0",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.2",
