--- a/smartr_account/package.json
+++ b/smartr_account/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "rimraf ./build && tsc",
-    "test": "jest --runInBand"
+    "test": "node --trace-deprecation ./node_modules/.bin/jest --runInBand"
   },
   "keywords": [],
   "author": "0xknwn",
@@ -16,6 +16,7 @@
     "abi-wan-kanabi": "^2.2.1",
     "jest": "^29.7.0",
     "rimraf": "^5.0.5",
+    "starknet": "^6.7.0",
     "ts-jest": "^29.1.2",
     "typescript": "^5.4.2"
   }
