--- a/smartr_account/package.json
+++ b/smartr_account/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "rimraf ./build && tsc",
-    "test": "node --trace-deprecation ./node_modules/.bin/jest --runInBand"
+    "test": "jest --runInBand"
   },
   "keywords": [],
   "author": "0xknwn",
