--- a/.github/workflows/devnet.yml
+++ b/.github/workflows/devnet.yml
@@ -26,8 +26,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: lts/*
+          node-version: 21
           cache: 'npm'
+          cache-dependency-path: 'smartr_account/package-lock.json'
       - run: cd smartr_account && npm ci --ignore-scripts
       - run: cd smartr_account && cp .env.template.json .env.devnet.json
       - run: cd smartr_account && npm run test
