--- a/smartr_account/package.json
+++ b/smartr_account/package.json
@@ -18,6 +18,7 @@
     "rimraf": "^5.0.5",
     "starknet": "^6.7.0",
     "ts-jest": "^29.1.2",
+    "tslib": "^2.6.2",
     "typescript": "^5.4.2"
   }
 }
