--- a/.github/workflows/devnet.yml
+++ b/.github/workflows/devnet.yml
@@ -5,6 +5,11 @@ on:
       - '**'
     paths:
       - 'smartr_account/**'
+  push:
+    branches:
+      - 'develop'
+    paths:
+      - '**'
 
 jobs:
   test:
@@ -27,7 +32,7 @@ jobs:
           cache-dependency-path: 'smartr_account/package-lock.json'
       - run: node --version
       - name: download-starkli
-        run: curl -sL -o starkli-x86_64-unknown-linux-gnu.tar.gz https://github.com/xJonathanLEI/starkli/releases/download/v0.2.8/starkli-x86_64-unknown-linux-gnu.tar.gz
+        run: curl -L --no-progress-meter -o starkli-x86_64-unknown-linux-gnu.tar.gz https://github.com/xJonathanLEI/starkli/releases/download/v0.2.8/starkli-x86_64-unknown-linux-gnu.tar.gz
       - name: untar-starkli
         run: tar -C /usr/local/bin -zxvf starkli-x86_64-unknown-linux-gnu.tar.gz
       - run: cd smartr_account && npm ci --ignore-scripts
