--- a/.github/workflows/devnet.yml
+++ b/.github/workflows/devnet.yml
@@ -1,4 +1,4 @@
-name: run tests on devnet
+name: devnet
 on:
   pull_request:
     branches:
@@ -13,7 +13,7 @@ on:
 
 jobs:
   test:
-    name: run tests on devnet
+    name: install, build and run jest scripts
     runs-on: ubuntu-latest
     timeout-minutes: 10
 
@@ -31,14 +31,16 @@ jobs:
           cache: 'npm'
           cache-dependency-path: 'smartr_account/package-lock.json'
       - run: node --version
-      - name: download-starkli
+      - name: download starkli
         run: curl -L --no-progress-meter -o starkli-x86_64-unknown-linux-gnu.tar.gz https://github.com/xJonathanLEI/starkli/releases/download/v0.2.8/starkli-x86_64-unknown-linux-gnu.tar.gz
-      - name: untar-starkli
+      - name: install starkli
         run: tar -C /usr/local/bin -zxvf starkli-x86_64-unknown-linux-gnu.tar.gz
       - run: cd smartr_account && npm ci --ignore-scripts
-      - name: scarb-install
+      - name: install scarb
         run: curl --proto '=https' --tlsv1.2 -sSf https://docs.swmansion.com/scarb/install.sh | sh
-      - name: scarb-build
+      - name: build contract with scarb
         run: cd smartr_account && scarb build
-      - run: cd smartr_account && cp .env.template.json .env.devnet.json
-      - run: cd smartr_account && npm run test
+      - name: configure environment for devnet and seed=0
+        run: cd smartr_account && cp .env.template.json .env.devnet.json
+      - name: jest tests
+        run: cd smartr_account && npm run test
