--- a/.github/workflows/devnet.yml
+++ b/.github/workflows/devnet.yml
@@ -15,7 +15,7 @@ jobs:
   test:
     name: install, build and run jest scripts
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 15
 
     services:
       devnet:
@@ -30,17 +30,17 @@ jobs:
           node-version: '21.x'
           cache: 'npm'
           cache-dependency-path: 'smartr_account/package-lock.json'
-      - run: node --version
-      - name: download starkli
+      - name: Download starkli
         run: curl -L --no-progress-meter -o starkli-x86_64-unknown-linux-gnu.tar.gz https://github.com/xJonathanLEI/starkli/releases/download/v0.2.8/starkli-x86_64-unknown-linux-gnu.tar.gz
-      - name: install starkli
+      - name: Install starkli
         run: tar -C /usr/local/bin -zxvf starkli-x86_64-unknown-linux-gnu.tar.gz
-      - run: cd smartr_account && npm ci --ignore-scripts
-      - name: install scarb
+      - name: Install npm dependencies
+        run: cd smartr_account && npm ci --ignore-scripts
+      - name: Install scarb
         run: curl --proto '=https' --tlsv1.2 -sSf https://docs.swmansion.com/scarb/install.sh | sh
-      - name: build contract with scarb
+      - name: Build starknet contracts
         run: cd smartr_account && scarb build
-      - name: configure environment for devnet and seed=0
+      - name: Configure environment for devnet and seed=0
         run: cd smartr_account && cp .env.template.json .env.devnet.json
-      - name: jest tests
+      - name: Run jest tests
         run: cd smartr_account && npm run test
