--- a/.github/workflows/devnet.yml
+++ b/.github/workflows/devnet.yml
@@ -4,7 +4,8 @@ on:
     branches:
       - '**'
     paths:
-      - 'smartr_account/**'
+      - '**'
+      - '!docs/*'
   push:
     branches:
       - 'develop'
@@ -29,18 +30,17 @@ jobs:
         with:
           node-version: '21.x'
           cache: 'npm'
-          cache-dependency-path: 'smartr_account/package-lock.json'
       - name: Download starkli
         run: curl -L --no-progress-meter -o starkli-x86_64-unknown-linux-gnu.tar.gz https://github.com/xJonathanLEI/starkli/releases/download/v0.2.8/starkli-x86_64-unknown-linux-gnu.tar.gz
       - name: Install starkli
         run: tar -C /usr/local/bin -zxvf starkli-x86_64-unknown-linux-gnu.tar.gz
       - name: Install npm dependencies
-        run: cd smartr_account && npm ci --ignore-scripts
+        run: npm ci --ignore-scripts
       - name: Install scarb
         run: curl --proto '=https' --tlsv1.2 -sSf https://docs.swmansion.com/scarb/install.sh | sh
       - name: Build starknet contracts
-        run: cd smartr_account && scarb build
+        run: scarb build
       - name: Configure environment for devnet and seed=0
-        run: cd smartr_account && cp .env.template.json .env.devnet.json
+        run: cp .env.template.json .env.devnet.json
       - name: Run jest tests
-        run: cd smartr_account && npm run test
+        run: npm run test
