--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "a modular account for starknet",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf ./build && tsc",
+    "build:scarb": "scarb build",
+    "build:abi:Counter": "npx abi-wan-kanabi --input ./target/dev/smartr_Counter.contract_class.json --output ./__integration__/abi/Counter.ts",
+    "build:abi:Account": "npx abi-wan-kanabi --input ./target/dev/smartr_Account.contract_class.json --output ./__integration__/abi/Account.ts",
+    "build:abi:SimpleAccount": "npx abi-wan-kanabi --input ./target/dev/smartr_SimpleAccount.contract_class.json --output ./__integration__/abi/SimpleAccount.ts",
+    "build:abi:SimplePlugin": "npx abi-wan-kanabi --input ./target/dev/smartr_SimplePlugin.contract_class.json --output ./__integration__/abi/SimplePlugin.ts",
+    "build:abi": "npm run build:abi:Counter && npm run build:abi:Account && npm run build:abi:SimpleAccount && npm run build:abi:SimplePlugin",
+    "build": "npm run build:scarb",
     "test": "jest --runInBand --verbose"
   },
   "keywords": [],
@@ -15,7 +21,6 @@
     "@types/node": "^20.11.27",
     "abi-wan-kanabi": "^2.2.1",
     "jest": "^29.7.0",
-    "rimraf": "^5.0.5",
     "starknet": "^6.7.0",
     "ts-jest": "^29.1.2",
     "tslib": "^2.6.2",
