--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build:abi:Counter": "npx abi-wan-kanabi --input ./target/dev/smartr_Counter.contract_class.json --output ./__integration__/abi/Counter.ts",
     "build:abi:Account": "npx abi-wan-kanabi --input ./target/dev/smartr_Account.contract_class.json --output ./__integration__/abi/Account.ts",
     "build:abi:SimpleAccount": "npx abi-wan-kanabi --input ./target/dev/smartr_SimpleAccount.contract_class.json --output ./__integration__/abi/SimpleAccount.ts",
-    "build:abi:SimplePlugin": "npx abi-wan-kanabi --input ./target/dev/smartr_SimplePlugin.contract_class.json --output ./__integration__/abi/SimplePlugin.ts",
-    "build:abi": "npm run build:abi:Counter && npm run build:abi:Account && npm run build:abi:SimpleAccount && npm run build:abi:SimplePlugin",
+    "build:abi:SimpleModule": "npx abi-wan-kanabi --input ./target/dev/smartr_SimpleModule.contract_class.json --output ./__integration__/abi/SimpleModule.ts",
+    "build:abi": "npm run build:abi:Counter && npm run build:abi:Account && npm run build:abi:SimpleAccount && npm run build:abi:SimpleModule",
     "build": "npm run build:scarb",
     "test": "jest --runInBand --verbose"
   },
