--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "build:abi:CoreValidator": "npx abi-wan-kanabi --input ./target/dev/smartr_CoreValidator.contract_class.json --output ./__integration__/abi/CoreValidator.ts",
     "build:abi:Counter": "npx abi-wan-kanabi --input ./target/dev/smartr_Counter.contract_class.json --output ./__integration__/abi/Counter.ts",
     "build:abi:SessionKeyValidator": "npx abi-wan-kanabi --input ./target/dev/smartr_SessionKeyValidator.contract_class.json --output ./__integration__/abi/SessionKeyValidator.ts",
+    "build:abi:FailedAccount": "npx abi-wan-kanabi --input ./target/dev/smartr_FailedAccount.contract_class.json --output ./__integration__/abi/FailedAccount.ts",
     "build:abi:SimpleAccount": "npx abi-wan-kanabi --input ./target/dev/smartr_SimpleAccount.contract_class.json --output ./__integration__/abi/SimpleAccount.ts",
     "build:abi:SmartrAccount": "npx abi-wan-kanabi --input ./target/dev/smartr_SmartrAccount.contract_class.json --output ./__integration__/abi/SmartrAccount.ts",
     "build:abi:SwapRouter": "npx abi-wan-kanabi --input ./target/dev/smartr_SwapRouter.contract_class.json --output ./__integration__/abi/SwapRouter.ts",
     "build:abi:TokenA": "npx abi-wan-kanabi --input ./target/dev/smartr_TokenA.contract_class.json --output ./__integration__/abi/TokenA.ts",
     "build:abi:TokenB": "npx abi-wan-kanabi --input ./target/dev/smartr_TokenB.contract_class.json --output ./__integration__/abi/TokenB.ts",
-    "build:abi": "npm run build:abi:Counter && npm run build:abi:SmartrAccount && npm run build:abi:SimpleAccount && npm run build:abi:CoreValidator && npm run build:abi:SessionKeyValidator && npm run build:abi:SwapRouter && npm run build:abi:TokenA && npm run build:abi:TokenB",
+    "build:abi": "npm run build:abi:Counter && npm run build:abi:SmartrAccount && npm run build:abi:SimpleAccount && npm run build:abi:FailedAccount && npm run build:abi:CoreValidator && npm run build:abi:SessionKeyValidator && npm run build:abi:SwapRouter && npm run build:abi:TokenA && npm run build:abi:TokenB",
     "build": "npm run build:scarb",
     "test:sessionkey_validator": "npm run build && jest --runInBand --verbose sessionkey_validator.test.ts",
     "test:core_validator": "npm run build && jest --runInBand --verbose core_validator.test.ts",
