--- a/package.json
+++ b/package.json
@@ -3,25 +3,29 @@
   "version": "0.0.1",
   "description": "a modular account for starknet",
   "main": "index.js",
+  "workspaces": [
+    "sdks/*"
+  ],
   "scripts": {
-    "doc": "mdbook serve --open -d book",
-    "build:scarb": "scarb build",
     "build:abi:CoreValidator": "npx abi-wan-kanabi --input ./target/dev/smartr_CoreValidator.contract_class.json --output ./__integration__/abi/CoreValidator.ts",
     "build:abi:Counter": "npx abi-wan-kanabi --input ./target/dev/smartr_Counter.contract_class.json --output ./__integration__/abi/Counter.ts",
-    "build:abi:SessionKeyValidator": "npx abi-wan-kanabi --input ./target/dev/smartr_SessionKeyValidator.contract_class.json --output ./__integration__/abi/SessionKeyValidator.ts",
     "build:abi:FailedAccount": "npx abi-wan-kanabi --input ./target/dev/smartr_FailedAccount.contract_class.json --output ./__integration__/abi/FailedAccount.ts",
+    "build:abi:SessionKeyValidator": "npx abi-wan-kanabi --input ./target/dev/smartr_SessionKeyValidator.contract_class.json --output ./__integration__/abi/SessionKeyValidator.ts",
     "build:abi:SimpleAccount": "npx abi-wan-kanabi --input ./target/dev/smartr_SimpleAccount.contract_class.json --output ./__integration__/abi/SimpleAccount.ts",
     "build:abi:SmartrAccount": "npx abi-wan-kanabi --input ./target/dev/smartr_SmartrAccount.contract_class.json --output ./__integration__/abi/SmartrAccount.ts",
     "build:abi:SwapRouter": "npx abi-wan-kanabi --input ./target/dev/smartr_SwapRouter.contract_class.json --output ./__integration__/abi/SwapRouter.ts",
     "build:abi:TokenA": "npx abi-wan-kanabi --input ./target/dev/smartr_TokenA.contract_class.json --output ./__integration__/abi/TokenA.ts",
     "build:abi:TokenB": "npx abi-wan-kanabi --input ./target/dev/smartr_TokenB.contract_class.json --output ./__integration__/abi/TokenB.ts",
     "build:abi": "npm run build:abi:Counter && npm run build:abi:SmartrAccount && npm run build:abi:SimpleAccount && npm run build:abi:FailedAccount && npm run build:abi:CoreValidator && npm run build:abi:SessionKeyValidator && npm run build:abi:SwapRouter && npm run build:abi:TokenA && npm run build:abi:TokenB",
+    "build:scarb": "scarb build",
+    "build:sdks": "tsc --build --verbose tsconfig.build.json",
     "build": "npm run build:scarb",
-    "test:sessionkey_validator": "npm run build && jest --runInBand --verbose sessionkey_validator.test.ts",
+    "doc": "mdbook serve --open -d book",
+    "resource:scarb": "scarb run resource",
     "test:core_validator": "npm run build && jest --runInBand --verbose core_validator.test.ts",
     "test:module": "npm run build && jest --runInBand --verbose module.test.ts",
     "test:scarb": "scarb run test",
-    "resource:scarb": "scarb run resource",
+    "test:sessionkey_validator": "npm run build && jest --runInBand --verbose sessionkey_validator.test.ts",
     "test": "jest --runInBand --verbose"
   },
   "keywords": [],
@@ -35,6 +39,7 @@
     "starknet": "^6.7.0",
     "ts-jest": "^29.1.2",
     "tslib": "^2.6.2",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "vite": "^5.2.9"
   }
 }
