--- a/sdks/starknet-account/package.json
+++ b/sdks/starknet-account/package.json
@@ -14,7 +14,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "jest --runInBand --verbose",
+    "test": "vitest",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
