--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ts-jest": "^29.1.2",
     "tslib": "^2.6.2",
     "typescript": "^5.4.2",
-    "vite": "^5.2.9"
+    "vite": "^5.2.9",
+    "vitest": "^1.5.0"
   }
 }
