--- a/.github/workflows/sdk-starknet-account.yml
+++ b/.github/workflows/sdk-starknet-account.yml
@@ -14,6 +14,6 @@ on:
 
 jobs:
   test:
-    uses: .github/workflows/sdk-starknet-account.yml
+    uses: ./.github/workflows/sdk-starknet-account.yml
     with:
       workspace: "@0xknwn/starknet-account"
