--- a/package.json
+++ b/package.json
@@ -2,11 +2,8 @@
   "name": "starknet-modular-account",
   "version": "0.0.1",
   "description": "a modular account for starknet",
-  "main": "index.js",
-  "workspaces": [
-    "sdks/*"
-  ],
   "scripts": {
+    "build": "tsc --build",
     "build:abi:CoreValidator": "npx abi-wan-kanabi --input ./target/dev/smartr_CoreValidator.contract_class.json --output ./__integration__/abi/CoreValidator.ts",
     "build:abi:Counter": "npx abi-wan-kanabi --input ./target/dev/smartr_Counter.contract_class.json --output ./__integration__/abi/Counter.ts",
     "build:abi:FailedAccount": "npx abi-wan-kanabi --input ./target/dev/smartr_FailedAccount.contract_class.json --output ./__integration__/abi/FailedAccount.ts",
@@ -18,29 +15,25 @@
     "build:abi:TokenB": "npx abi-wan-kanabi --input ./target/dev/smartr_TokenB.contract_class.json --output ./__integration__/abi/TokenB.ts",
     "build:abi": "npm run build:abi:Counter && npm run build:abi:SmartrAccount && npm run build:abi:SimpleAccount && npm run build:abi:FailedAccount && npm run build:abi:CoreValidator && npm run build:abi:SessionKeyValidator && npm run build:abi:SwapRouter && npm run build:abi:TokenA && npm run build:abi:TokenB",
     "build:scarb": "scarb build",
-    "build:sdks": "tsc --build --verbose tsconfig.build.json",
-    "build": "npm run build:scarb",
     "doc": "mdbook serve --open -d book",
     "resource:scarb": "scarb run resource",
-    "test:core_validator": "npm run build && jest --runInBand --verbose core_validator.test.ts",
-    "test:module": "npm run build && jest --runInBand --verbose module.test.ts",
-    "test:scarb": "scarb run test",
-    "test:sessionkey_validator": "npm run build && jest --runInBand --verbose sessionkey_validator.test.ts",
-    "test": "jest --runInBand --verbose"
+    "test:scarb": "scarb run test"
   },
-  "keywords": [],
   "author": "0xknwn",
   "license": "MIT",
+  "workspaces": [
+    "sdks/starknet-account",
+    "sdks/starknet-module-sessionkey",
+    "sdks/starknet-test-helpers"
+  ],
   "devDependencies": {
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.27",
-    "abi-wan-kanabi": "^2.2.1",
+    "@types/node": "^20.12.7",
+    "abi-wan-kanabi": "^2.2.2",
     "jest": "^29.7.0",
     "starknet": "^6.7.0",
     "ts-jest": "^29.1.2",
     "tslib": "^2.6.2",
-    "typescript": "^5.4.2",
-    "vite": "^5.2.9",
-    "vitest": "^1.5.0"
+    "typescript": "^4.9.5"
   }
 }
