--- a/sdks/starknet-account/package.json
+++ b/sdks/starknet-account/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "jest"
   },
   "author": "Dávid Szabó",
   "license": "ISC",
