--- a/.github/workflows/sdk-starknet-test-helpers.yml
+++ b/.github/workflows/sdk-starknet-test-helpers.yml
@@ -1,10 +1,10 @@
-name: 0xknwn/starknet-account tests
+name: 0xknwn/starknet-test-helpers tests
 on:
   pull_request:
     branches:
       - '**'
     paths:
-      - 'sdk/starknet-account/**'
+      - 'sdk/starknet-test-helpers/**'
       - 'src'
   push:
     branches:
@@ -16,4 +16,4 @@ jobs:
   test:
     uses: ./.github/workflows/_sdks_jest.yml
     with:
-      workspace: "@0xknwn/starknet-account"
+      workspace: "@0xknwn/starknet-test-helpers"
