--- a/.github/workflows/_sdks_jest.yml
+++ b/.github/workflows/_sdks_jest.yml
@@ -1,4 +1,4 @@
-name: _ Reusable Typescript/Vitest Workflow for SDKs
+name: _ Reusable Typescript/Jest Workflow for SDKs
 
 on:
   workflow_call:
@@ -38,6 +38,9 @@ jobs:
 
       - name: Configure environment for devnet and seed=0
         run: cp .env.template.json .env.devnet.json
+
+      - name: build the project
+        run: npm run build
 
       - name: Run jest tests
         run: npm run test -w ${{ inputs.workspace }}
