--- a/.github/workflows/sdk-starknet-test-helpers.yml
+++ b/.github/workflows/sdk-starknet-test-helpers.yml
@@ -1,4 +1,4 @@
-name: 0xknwn/starknet-test-helpers tests
+name: starknet-test-helpers tests
 on:
   pull_request:
     branches:
@@ -15,4 +15,4 @@ jobs:
   test:
     uses: ./.github/workflows/_sdks_jest.yml
     with:
-      workspace: "@0xknwn/starknet-test-helpers"
+      workspace: "starknet-test-helpers"
