--- a/experiments/starknet-failed-account/package.json
+++ b/experiments/starknet-failed-account/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@0xknwn/starknet-module-sessionkey",
+  "name": "starknet-failed-account",
   "version": "0.1.0",
   "description": "",
   "main": "dist/index.js",
