--- a/package.json
+++ b/package.json
@@ -4,16 +4,9 @@
   "description": "a modular account for starknet",
   "scripts": {
     "build": "tsc --build",
-    "build:abi:CoreValidator": "npx abi-wan-kanabi --input ./target/dev/smartr_CoreValidator.contract_class.json --output ./__integration__/abi/CoreValidator.ts",
-    "build:abi:Counter": "npx abi-wan-kanabi --input ./target/dev/smartr_Counter.contract_class.json --output ./__integration__/abi/Counter.ts",
     "build:abi:FailedAccount": "npx abi-wan-kanabi --input ./target/dev/smartr_FailedAccount.contract_class.json --output ./__integration__/abi/FailedAccount.ts",
     "build:abi:SessionKeyValidator": "npx abi-wan-kanabi --input ./target/dev/smartr_SessionKeyValidator.contract_class.json --output ./__integration__/abi/SessionKeyValidator.ts",
-    "build:abi:SimpleAccount": "npx abi-wan-kanabi --input ./target/dev/smartr_SimpleAccount.contract_class.json --output ./__integration__/abi/SimpleAccount.ts",
-    "build:abi:SmartrAccount": "npx abi-wan-kanabi --input ./target/dev/smartr_SmartrAccount.contract_class.json --output ./__integration__/abi/SmartrAccount.ts",
-    "build:abi:SwapRouter": "npx abi-wan-kanabi --input ./target/dev/smartr_SwapRouter.contract_class.json --output ./__integration__/abi/SwapRouter.ts",
-    "build:abi:TokenA": "npx abi-wan-kanabi --input ./target/dev/smartr_TokenA.contract_class.json --output ./__integration__/abi/TokenA.ts",
-    "build:abi:TokenB": "npx abi-wan-kanabi --input ./target/dev/smartr_TokenB.contract_class.json --output ./__integration__/abi/TokenB.ts",
-    "build:abi": "npm run build:abi:Counter && npm run build:abi:SmartrAccount && npm run build:abi:SimpleAccount && npm run build:abi:FailedAccount && npm run build:abi:CoreValidator && npm run build:abi:SessionKeyValidator && npm run build:abi:SwapRouter && npm run build:abi:TokenA && npm run build:abi:TokenB",
+    "build:abi": "npm run build:abi:FailedAccount && npm run build:abi:SessionKeyValidator",
     "build:scarb": "scarb build",
     "doc": "mdbook serve --open -d book",
     "resource:scarb": "scarb run resource",
@@ -22,6 +15,7 @@
   "author": "0xknwn",
   "license": "MIT",
   "workspaces": [
+    "experiments/starknet-failed-account",
     "sdks/starknet-account",
     "sdks/starknet-module-sessionkey",
     "sdks/starknet-test-helpers"
