update and document the 0xknwn/starknet-account sdk

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "author": "0xknwn",
   "license": "MIT",
   "workspaces": [
-    "sdks/starknet-test-helpers"
+    "sdks/starknet-test-helpers",
+    "sdks/starknet-account"
   ],
   "devDependencies": {
     "@types/jest": "^29.5.12",
