--- a/sdks/starknet-account/tsconfig.json
+++ b/sdks/starknet-account/tsconfig.json
@@ -4,5 +4,10 @@
     "rootDir": "src",
     "outDir": "dist"
   },
-  "references": [{ "path": "../starknet-test-helpers" }]
+  "references": [{ "path": "../starknet-test-helpers" }],
+  "typedocOptions": {
+    "entryPoints": ["src/index.ts"],
+    "out": "docs",
+    "plugin": "typedoc-plugin-markdown"
+  }
 }
