--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "files": [],
   "references": [
-    { "path": "sdks/starknet-test-helpers" }
+    { "path": "sdks/starknet-test-helpers" },
+    { "path": "sdks/starknet-account" }
   ]
 }
