--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:abi:SessionKeyValidator": "npx abi-wan-kanabi --input ./target/dev/smartr_SessionKeyValidator.contract_class.json --output ./__integration__/abi/SessionKeyValidator.ts",
     "build:abi": "npm run build:abi:FailedAccount && npm run build:abi:SessionKeyValidator",
     "build:scarb": "scarb build",
-    "doc": "npm run doc -ws --if-present && mdbook serve --open -d book",
+    "doc": "npm run doc -ws --if-present",
+    "mdbook": "mdbook serve --open -d book",
     "resource:scarb": "scarb run resource",
     "test:scarb": "scarb run test"
   },
