--- a/sdks/starknet-account/package.json
+++ b/sdks/starknet-account/package.json
@@ -8,7 +8,7 @@
     "build:abi:CoreValidator": "npx abi-wan-kanabi --input ../../target/dev/smartr_CoreValidator.contract_class.json --output ./src/abi/CoreValidator.ts",
     "build:abi:SmartrAccount": "npx abi-wan-kanabi --input ../../target/dev/smartr_SmartrAccount.contract_class.json --output ./src/abi/SmartrAccount.ts",
     "build:abi": "mkdir -p src/abi && npm run build:abi:SmartrAccount && npm run build:abi:CoreValidator",
-    "doc": "typedoc && mkdir -p ../../docs/starknet-account && cp -R docs/modules.md docs/classes ../../docs/starknet-account/",
+    "doc": "typedoc && mkdir -p ../../docs/starknet-account && cp -R docs/modules.md docs/classes ./docs/interfaces ../../docs/starknet-account/",
     "test": "jest --runInBand --verbose"
   },
   "author": "0xknwn",
