--- a/sdks/starknet-module-sessionkey/tsconfig.json
+++ b/sdks/starknet-module-sessionkey/tsconfig.json
@@ -4,5 +4,8 @@
     "rootDir": "src",
     "outDir": "dist"
   },
-  "references": [{ "path": "../starknet-test-helpers" }]
+  "references": [
+    { "path": "../starknet-test-helpers" },
+    { "path": "../starknet-account" }
+  ]
 }
