--- a/.github/workflows/sdk-starknet-module-sessionkey.yml
+++ b/.github/workflows/sdk-starknet-module-sessionkey.yml
@@ -1,15 +1,15 @@
 name: 0xknwn/starknet-module-sessionkey tests
-on: workflow_dispatch
-  # pull_request:
-  #   branches:
-  #     - '**'
-  #   paths:
-  #     - '**'
-  # push:
-  #   branches:
-  #     - 'develop'
-  #   paths:
-  #     - '**'
+on:
+  pull_request:
+    branches:
+      - '**'
+    paths:
+      - '**'
+  push:
+    branches:
+      - 'develop'
+    paths:
+      - '**'
 
 jobs:
   test:
