--- a/sdks/starknet-module-sessionkey/package.json
+++ b/sdks/starknet-module-sessionkey/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build:abi:SessionKeyValidator": "npx abi-wan-kanabi --input ../../target/dev/smartr_SessionKeyValidator.contract_class.json --output ./src/abi/SessionKeyValidator.ts",
     "build:abi": "mkdir -p src/abi && npm run build:abi:SessionKeyValidator",
+    "doc": "typedoc && mkdir -p ../../docs/starknet-module-sessionkey && cp -R docs/modules.md ../../docs/starknet-module-sessionkey/",
     "test": "jest --runInBand"
   },
   "author": "0xknwn",
