--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "files": [],
   "references": [
     { "path": "sdks/starknet-test-helpers" },
-    { "path": "sdks/starknet-account" }
+    { "path": "sdks/starknet-account" },
+    { "path": "sdks/starknet-module-sessionkey" }
   ]
 }
