--- a/sdks/starknet-module-sessionkey/tsconfig.json
+++ b/sdks/starknet-module-sessionkey/tsconfig.json
@@ -7,5 +7,10 @@
   "references": [
     { "path": "../starknet-test-helpers" },
     { "path": "../starknet-account" }
-  ]
+  ],
+  "typedocOptions": {
+    "entryPoints": ["src/index.ts"],
+    "out": "docs",
+    "plugin": "typedoc-plugin-markdown"
+  }
 }
