--- a/experiments/starknet-failed-account/package.json
+++ b/experiments/starknet-failed-account/package.json
@@ -5,8 +5,9 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build:abi:SessionKeyValidator": "npx abi-wan-kanabi --input ../../target/dev/smartr_SessionKeyValidator.contract_class.json --output ./src/abi/SessionKeyValidator.ts",
-    "build:abi": "mkdir -p src/abi && npm run build:abi:SessionKeyValidator",
+    "build:abi:FailedAccount": "npx abi-wan-kanabi --input ../../target/dev/smartr_FailedAccount.contract_class.json --output ./src/abi/FailedAccount.ts",
+    "build:abi": "mkdir -p src/abi && npm run build:abi:FailedAccount",
+    "doc": "typedoc",
     "test": "jest --runInBand"
   },
   "author": "0xknwn",
