--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Install npm dependencies
         run: npm ci --ignore-scripts
 
+      - name: Run build for local dependencies
+        run: npm run build
+
       - name: Generate reference documentation
         run: npm run doc
 
