--- a/.github/workflows/experiment-starknet-bootstrap-account.yml
+++ b/.github/workflows/experiment-starknet-bootstrap-account.yml
@@ -1,16 +1,5 @@
 name: starknet-failed-account tests
-# on: workflow_dispatch
-on:
-  pull_request:
-    branches:
-      - '**'
-    paths:
-      - '**'
-  push:
-    branches:
-      - 'develop'
-    paths:
-      - '**'
+on: workflow_dispatch
 
 jobs:
   test:
