--- a/sdks/starknet-module-sessionkey/package.json
+++ b/sdks/starknet-module-sessionkey/package.json
@@ -5,8 +5,9 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "build:abi:CoreValidator": "npx abi-wan-kanabi --input ../../target/dev/smartr_CoreValidator.contract_class.json --output ./src/abi/CoreValidator.ts",
     "build:abi:SessionKeyValidator": "npx abi-wan-kanabi --input ../../target/dev/smartr_SessionKeyValidator.contract_class.json --output ./src/abi/SessionKeyValidator.ts",
-    "build:abi": "mkdir -p src/abi && npm run build:abi:SessionKeyValidator",
+    "build:abi": "mkdir -p src/abi && npm run build:abi:SessionKeyValidator && npm run build:abi:CoreValidator",
     "doc": "typedoc && mkdir -p ../../docs/starknet-module-sessionkey && cp -R docs/modules.md docs/classes ../../docs/starknet-module-sessionkey/",
     "test": "jest --runInBand --verbose"
   },
