--- a/experiments/starknet-failed-account/tsconfig.json
+++ b/experiments/starknet-failed-account/tsconfig.json
@@ -4,7 +4,7 @@
     "rootDir": "src",
     "outDir": "dist"
   },
-  "references": [{ "path": "../../sdks/starknet-test-helpers" }],
+  "references": [{ "path": "../../sdks/__tests__/helpers" }],
   "typedocOptions": {
     "entryPoints": ["src/index.ts"],
     "out": "docs",
