--- a/sdks/module-sessionkey/tsconfig.json
+++ b/sdks/module-sessionkey/tsconfig.json
@@ -4,9 +4,12 @@
     "rootDir": "src",
     "outDir": "dist"
   },
-  "references": [{ "path": "../../sdks/__tests__/helpers" }],
+  "references": [
+    { "path": "../account" }
+  ],
   "typedocOptions": {
     "entryPoints": ["src/index.ts"],
     "out": "docs",
     "plugin": "typedoc-plugin-markdown"
-  }}
+  }
+}
