--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.1.3",
   "description": "a modular account for starknet",
   "scripts": {
-    "build": "tsc --build",
-    "build:scarb": "scarb build",
+    "artifacts": "npm run artifacts:bootstrap && npm run artifacts:failedaccount && npm run artifacts:account && npm run artifacts:sessionkey && npm run artifacts:tests",
+    "artifacts:bootstrap": "cp target/dev/smartr_BootstrapAccount.* experiments/starknet-bootstrap-account/src/artifacts/",
+    "artifacts:failedaccount": "cp target/dev/smartr_FailedAccount.* experiments/starknet-failed-account/src/artifacts/",
+    "artifacts:account": "cp target/dev/smartr_CoreValidator.* target/dev/smartr_SimpleValidator.* target/dev/smartr_SmartrAccount.* sdks/account/src/artifacts/",
+    "artifacts:sessionkey": "cp target/dev/smartr_SessionKeyValidator.* sdks/module-sessionkey/src/artifacts/",
+    "artifacts:tests": "cp target/dev/smartr_Counter.* target/dev/smartr_SimpleAccount.* target/dev/smartr_SwapRouter.* target/dev/smartr_TokenA.* target/dev/smartr_TokenB.* sdks/__tests__/helpers/src/artifacts/",
+    "build": "npm run copy:artifacts -ws --if-present && tsc --build",
+    "build:scarb": "scarb build && npm run artifacts",
     "clean": "tsc --build --clean",
     "doc": "npm run doc -ws --if-present",
     "mdbook": "mdbook serve --open -d book",
