remove internal project code dependencies (#122)

--- a/package.json
+++ b/package.json
@@ -3,8 +3,42 @@
   "version": "0.1.3",
   "description": "a modular account for starknet",
   "scripts": {
+    "artifacts:bootstrap:compile": "node scripts/convert-typescript.js target/dev/smartr_BootstrapAccount.compiled_contract_class.json experiments/starknet-bootstrap-account/src/artifacts/BootstrapAccount-compiled.ts",
+    "artifacts:bootstrap:contract": "node scripts/convert-typescript.js target/dev/smartr_BootstrapAccount.contract_class.json experiments/starknet-bootstrap-account/src/artifacts/BootstrapAccount-contract.ts",
+    "artifacts:bootstrap": "npm run artifacts:bootstrap:compile && npm run artifacts:bootstrap:contract",
+    "artifacts:corevalidator:compile": "node scripts/convert-typescript.js target/dev/smartr_CoreValidator.compiled_contract_class.json sdks/account/src/artifacts/CoreValidator-compiled.ts",
+    "artifacts:corevalidator:contract": "node scripts/convert-typescript.js target/dev/smartr_CoreValidator.contract_class.json sdks/account/src/artifacts/CoreValidator-contract.ts",
+    "artifacts:corevalidator": "npm run artifacts:corevalidator:compile && npm run artifacts:corevalidator:contract",
+    "artifacts:counter:compile": "node scripts/convert-typescript.js target/dev/smartr_Counter.compiled_contract_class.json sdks/__tests__/helpers/src/artifacts/Counter-compiled.ts",
+    "artifacts:counter:contract": "node scripts/convert-typescript.js target/dev/smartr_Counter.contract_class.json sdks/__tests__/helpers/src/artifacts/Counter-contract.ts",
+    "artifacts:counter": "npm run artifacts:counter:compile && npm run artifacts:counter:contract",
+    "artifacts:failedaccount:compile": "node scripts/convert-typescript.js target/dev/smartr_FailedAccount.compiled_contract_class.json experiments/starknet-failed-account/src/artifacts/FailedAccount-compiled.ts",
+    "artifacts:failedaccount:contract": "node scripts/convert-typescript.js target/dev/smartr_FailedAccount.contract_class.json experiments/starknet-failed-account/src/artifacts/FailedAccount-contract.ts",
+    "artifacts:failedaccount": "npm run artifacts:failedaccount:compile && npm run artifacts:failedaccount:contract",
+    "artifacts:sessionkeyvalidator:compile": "node scripts/convert-typescript.js target/dev/smartr_SessionKeyValidator.compiled_contract_class.json sdks/module-sessionkey/src/artifacts/SessionKeyValidator-compiled.ts",
+    "artifacts:sessionkeyvalidator:contract": "node scripts/convert-typescript.js target/dev/smartr_SessionKeyValidator.contract_class.json sdks/module-sessionkey/src/artifacts/SessionKeyValidator-contract.ts",
+    "artifacts:sessionkeyvalidator": "npm run artifacts:sessionkeyvalidator:compile && npm run artifacts:sessionkeyvalidator:contract",
+    "artifacts:simpleaccount:compile": "node scripts/convert-typescript.js target/dev/smartr_SimpleAccount.compiled_contract_class.json sdks/__tests__/helpers/src/artifacts/SimpleAccount-compiled.ts",
+    "artifacts:simpleaccount:contract": "node scripts/convert-typescript.js target/dev/smartr_SimpleAccount.contract_class.json sdks/__tests__/helpers/src/artifacts/SimpleAccount-contract.ts",
+    "artifacts:simpleaccount": "npm run artifacts:simpleaccount:compile && npm run artifacts:simpleaccount:contract",
+    "artifacts:simplevalidator:compile": "node scripts/convert-typescript.js target/dev/smartr_SimpleValidator.compiled_contract_class.json sdks/account/src/artifacts/SimpleValidator-compiled.ts",
+    "artifacts:simplevalidator:contract": "node scripts/convert-typescript.js target/dev/smartr_SimpleValidator.contract_class.json sdks/account/src/artifacts/SimpleValidator-contract.ts",
+    "artifacts:simplevalidator": "npm run artifacts:simplevalidator:compile && npm run artifacts:simplevalidator:contract",
+    "artifacts:smartraccount:compile": "node scripts/convert-typescript.js target/dev/smartr_SmartrAccount.compiled_contract_class.json sdks/account/src/artifacts/SmartrAccount-compiled.ts",
+    "artifacts:smartraccount:contract": "node scripts/convert-typescript.js target/dev/smartr_SmartrAccount.contract_class.json sdks/account/src/artifacts/SmartrAccount-contract.ts",
+    "artifacts:smartraccount": "npm run artifacts:smartraccount:compile && npm run artifacts:smartraccount:contract",
+    "artifacts:swaprouter:compile": "node scripts/convert-typescript.js target/dev/smartr_SwapRouter.compiled_contract_class.json sdks/__tests__/helpers/src/artifacts/SwapRouter-compiled.ts",
+    "artifacts:swaprouter:contract": "node scripts/convert-typescript.js target/dev/smartr_SwapRouter.contract_class.json sdks/__tests__/helpers/src/artifacts/SwapRouter-contract.ts",
+    "artifacts:swaprouter": "npm run artifacts:swaprouter:compile && npm run artifacts:swaprouter:contract",
+    "artifacts:tokena:compile": "node scripts/convert-typescript.js target/dev/smartr_TokenA.compiled_contract_class.json sdks/__tests__/helpers/src/artifacts/TokenA-compiled.ts",
+    "artifacts:tokena:contract": "node scripts/convert-typescript.js target/dev/smartr_TokenA.contract_class.json sdks/__tests__/helpers/src/artifacts/TokenA-contract.ts",
+    "artifacts:tokena": "npm run artifacts:tokena:compile && npm run artifacts:tokena:contract",
+    "artifacts:tokenb:compile": "node scripts/convert-typescript.js target/dev/smartr_TokenB.compiled_contract_class.json sdks/__tests__/helpers/src/artifacts/TokenB-compiled.ts",
+    "artifacts:tokenb:contract": "node scripts/convert-typescript.js target/dev/smartr_TokenB.contract_class.json sdks/__tests__/helpers/src/artifacts/TokenB-contract.ts",
+    "artifacts:tokenb": "npm run artifacts:tokenb:compile && npm run artifacts:tokenb:contract",
+    "artifacts": "npm run artifacts:bootstrap && npm run artifacts:corevalidator && npm run artifacts:counter && npm run artifacts:failedaccount && npm run artifacts:sessionkeyvalidator && npm run artifacts:simpleaccount && npm run artifacts:smartraccount && npm run artifacts:swaprouter && npm run artifacts:tokena && npm run artifacts:tokenb",
     "build": "tsc --build",
-    "build:scarb": "scarb build",
+    "build:scarb": "scarb build && npm run artifacts",
     "clean": "tsc --build --clean",
     "doc": "npm run doc -ws --if-present",
     "mdbook": "mdbook serve --open -d book",
