--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "starknet-modular-account",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "a modular account for starknet",
   "scripts": {
+    "artifacts:artifacts": "cp -R target/dev/smartr_CoreValidator.* target/dev/smartr_SimpleValidator.* target/dev/smartr_SmartrAccount.* target/dev/smartr_SessionKeyValidator.* artifacts/.",
     "artifacts:bootstrap:compile": "node scripts/convert-typescript.js target/dev/smartr_BootstrapAccount.compiled_contract_class.json experiments/starknet-bootstrap-account/src/artifacts/BootstrapAccount-compiled.ts",
     "artifacts:bootstrap:contract": "node scripts/convert-typescript.js target/dev/smartr_BootstrapAccount.contract_class.json experiments/starknet-bootstrap-account/src/artifacts/BootstrapAccount-contract.ts",
     "artifacts:bootstrap": "npm run artifacts:bootstrap:compile && npm run artifacts:bootstrap:contract",
@@ -36,12 +37,13 @@
     "artifacts:tokenb:compile": "node scripts/convert-typescript.js target/dev/smartr_TokenB.compiled_contract_class.json sdks/__tests__/helpers/src/artifacts/TokenB-compiled.ts",
     "artifacts:tokenb:contract": "node scripts/convert-typescript.js target/dev/smartr_TokenB.contract_class.json sdks/__tests__/helpers/src/artifacts/TokenB-contract.ts",
     "artifacts:tokenb": "npm run artifacts:tokenb:compile && npm run artifacts:tokenb:contract",
-    "artifacts": "npm run artifacts:bootstrap && npm run artifacts:corevalidator && npm run artifacts:counter && npm run artifacts:failedaccount && npm run artifacts:sessionkeyvalidator && npm run artifacts:simpleaccount && npm run artifacts:smartraccount && npm run artifacts:swaprouter && npm run artifacts:tokena && npm run artifacts:tokenb",
+    "artifacts": "npm run artifacts:artifacts && npm run artifacts:bootstrap && npm run artifacts:corevalidator && npm run artifacts:counter && npm run artifacts:failedaccount && npm run artifacts:sessionkeyvalidator && npm run artifacts:simpleaccount && npm run artifacts:smartraccount && npm run artifacts:swaprouter && npm run artifacts:tokena && npm run artifacts:tokenb",
     "build": "tsc --build",
     "build:scarb": "scarb build && npm run artifacts",
     "clean": "tsc --build --clean",
     "doc": "npm run doc -ws --if-present",
     "mdbook": "mdbook serve --open -d book",
+    "prepare": "node scripts/update-versions.js",
     "registry": "npm run registry -ws --if-present",
     "resource:scarb": "scarb run resource",
     "test:scarb": "scarb run test"
