--- a/sdks/module-sessionkey/package.json
+++ b/sdks/module-sessionkey/package.json
@@ -12,6 +12,9 @@
     "registry": "npm publish --access=public",
     "test": "jest --runInBand --verbose"
   },
+  "peerDependencies": {
+    "starknet": "6.8.0"
+  },
   "author": "0xknwn",
   "license": "MIT"
 }
