--- a/sdks/module-sessionkey/package.json
+++ b/sdks/module-sessionkey/package.json
@@ -1,13 +1,12 @@
 {
   "name": "@0xknwn/starknet-module-sessionkey",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build:abi:CoreValidator": "npx abi-wan-kanabi --input ../../target/dev/smartr_CoreValidator.contract_class.json --output ./src/abi/CoreValidator.ts",
     "build:abi:SessionKeyValidator": "npx abi-wan-kanabi --input ../../target/dev/smartr_SessionKeyValidator.contract_class.json --output ./src/abi/SessionKeyValidator.ts",
-    "build:abi": "mkdir -p src/abi && npm run build:abi:SessionKeyValidator && npm run build:abi:CoreValidator",
+    "build:abi": "mkdir -p src/abi && npm run build:abi:SessionKeyValidator",
     "doc": "typedoc && mkdir -p ../../docs/starknet-module-sessionkey && cp -R docs/modules.md docs/classes ../../docs/starknet-module-sessionkey/",
     "registry": "npm publish --access=public",
     "test": "jest --runInBand --verbose"
