--- a/experiments/documentation-examples/package.json
+++ b/experiments/documentation-examples/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@0xknwn/starknet-modular-account": "^0.1.6",
+    "@0xknwn/starknet-module-sessionkey": "^0.1.6",
     "@0xknwn/starknet-test-helpers": "^0.1.6",
     "starknet": "^6.8.0"
   }
